--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,14 +4,9 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "Home"
+  name = "About"
   url = "#about"
   weight = 10
-
-[[main]]
-  name = "Posts"
-  url = "#posts"
-  weight = 20
 
 [[main]]
   name = "Projects"
@@ -19,14 +14,24 @@
   weight = 30
 
 [[main]]
-  name = "Publications"
-  url = "#featured"
+  name = "Coursework"
+  url = "#courses"
   weight = 40
+
+[[main]]
+  name = "Certifications"
+  url = "#certifications"
+  weight = 50
+
+[[main]]
+  name = "Resume"
+  url = "files/ResumeDec31.pdf"
+  weight = 60
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 70
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
