job hunt update

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -35,7 +35,7 @@
 
 [[main]]
   name = "Resume"
-  url = "files/2021-05-20_resume.pdf"
+  url = "files/2021-10-17_onepager.pdf"
   weight = 80
 
 [[main]]
