--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -18,6 +18,12 @@
   url = "#experience"
   weight = 40
 
+
+[[main]]
+  name = "Skills"
+  url = "#skills"
+  weight = 45
+
 [[main]]
   name = "Talks"
   url = "#talks"
