remove skills section

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -19,10 +19,10 @@
   weight = 40
 
 
-[[main]]
-  name = "Skills"
-  url = "#skills"
-  weight = 45
+#[[main]]
+#  name = "Skills"
+#  url = "#skills"
+#  weight = 45
 
 [[main]]
   name = "Talks"
