--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -36,7 +36,7 @@
 
 [[main]]
   name = "Resume"
-  url = "files/GabriellaNovak_Resume.pdf"
+  url = "files/01_2023_Resume.pdf"
   weight = 70
 
 [[main]]
