--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -14,6 +14,11 @@
   weight = 30
 
 [[main]]
+  name = "Courses"
+  url = "#taught"
+  weight = 35
+
+[[main]]
   name = "Experience"
   url = "#experience"
   weight = 40
